[package]
name = "mybot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
# bincode = { version = "2.0.1", features = ["serde"] }
bincode = "1.3.3"
dotenv = "0.15.0"
humantime = "2.2.0"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
bs58 = "0.5.1"
serde_json = "1.0.140"
anyhow = "1.0.98"
yellowstone-grpc-client = "6.0.0"
tokio = "1.44.2"
futures = "0.3.31"
futures-util = "0.3.31"
yellowstone-grpc-proto = "6.0.0"
solana-transaction-status-client-types = "2.2.7"
solana-transaction-status = "2.2.7"
borsh = "1.5.7"
hex = "0.4.3"
sha2 = "0.10.8"
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"
jito-sdk-rust = "0.2.0"
solana-program = "2.2.1"
base64 = "0.22.1"
json = "0.12.4"
dirs = "6.0.0"
solana-commitment-config = "2.2.1"
